--- a/Trunk/mainPage.html
+++ b/Trunk/mainPage.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="story_creator.css">
+	<link rel="stylesheet" type="text/css" href="mainPage.css">
 	
 	<script src="http://d3lp1msu2r81bx.cloudfront.net/kjs/js/lib/kinetic-v4.7.2.min.js"></script>
 	<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-	<script src='visualEditorCanvas.js' type = 'text/javascript'></script>
-	<script src='sortable.js' type = 'text/javascript'></script>
+	<script src='Visual Editor/visualEditorCanvas.js' type = 'text/javascript'></script>
+	<script src='Visual Editor/sortable.js' type = 'text/javascript'></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 
 	<script src = 'object_creator/jfile.js' type = 'text/javascript' ></script>
 	<script src='Animation/animationBlocks.js' type = 'text/javascript' ></script>
-	
-	<script src= 'dataRequests.js' type = 'text/javascript'></script>
 
 	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
 	<script src="gui.js"> </script>
@@ -29,32 +27,24 @@
 		<canvas id="mainCanvas"></canvas>
 	</div>
 		
-
 	<div class="objectContainer">
 		<canvas id="objectCanvas"> </canvas>
 
 		<div id="tabs">
   			<div id="tabs-1">
-  				<script src = "objectPanel.js" defer="defer" type="text/javascript">
-  				</script>
-
-  		</div>
-
-  	</div>
-		</div>
-
-		<div class="VEContainer">
-
-			<canvas id = "VECanvas"></canvas>
-
-			<div id= 'tabs'>
-			<div id='container1'>
-				
+  				<script src = "objectPanel.js" defer="defer" type="text/javascript"></script>
 			</div>
 		</div>
+	</div>
+
+		<div class="VEContainer">
+			<canvas id = "VECanvas"></canvas>
+			
+			<div id= 'tabs'>
+				<div id='container1'>	</div>
+			</div>
 		</div>
 
-		
 <script>
 	mainCanvas.width = (window.innerWidth / 1.8);
 	mainCanvas.height = (window.innerHeight / 1.8);
@@ -83,42 +73,51 @@
 	}
 	
 	/**
-	/	Loads the information that the load.php page gives
+	Used to call the object creation pop-up window.
 	**/
-	function load(projectId){
-	//$.get("load.php", function(data, status){//issue a get request for the php page 'load.php"  
-	//		alert("Data: " + data + " Status: " + status);
-	//	});
-		$.ajax({
-				url: 'functions/load.php', //use the load php page to get the stuff from the database
-				type: 'GET',	//get the information from the php page (the stuff that is echo in the php file);
-				data: id = "testName",
-				success: function(data) { //if it worked alert the data
-					alert(data);
-				},
-				error: function(){//if it failed say it failed
-					alert("Request Failed");
-				}
-		});
+	function popitupObj(url)
+	{
+		newwindow=window.open(url, "object_creator/ObjectCreation.html", "status = 1, scrollbars =1, height = 600, width = 900");
+		if(window.focus){
+			newwindow.focus()
+		}
+		return false;
 	}
 	
-	
-	function loadProject(projectId) {
-	$.getJSON("functions/load.php", {id:projectId}, function(data) {
-		$("#theText").html(data.pCode);
-		alert(data);
-	});
-}
-
+	var projectCode = [];	
 	/**
-	/Save the information for save.php to put to the server's database
+	/Load the pCode (THE ACTUAL DATA THAT WE WANT THAT IS A JSON) and then parse the information in order to manipulate the object images
 	/
 	**/
+	function loadProject() {
+		//loadBlocks(json);
+		var objectName = prompt("Please enter the name of your project:");
+		
+		$.getJSON("functions/load.php", {id:objectName}, function(data) {
+			var unstring = JSON.parse(data.pCode);
+			//console.log("After Parsing with database data -------------"+unstring);
+			addImage(unstring[0][0], 300, 150);		
+			
+			//for(var j = 0; j<data.length; j++){//go through the list of 
+			//	addImage(unstring[0][0], 300, 150);		 //get the value out of the two dimensional array at the right spot (the value is the key of the array)
+			//}
+		});
+	}
+	/**
+	/Save the information for save.php to put to the server's database
+	/"code:" This needs to be the updated JSON that we are using for everything
+	**/
 	function save(){
+	if(sorter()) {
+		cleanUp(sortArray);
+	}
+	var projectId = prompt("Please enter the name of the project you are saving to:");
+	
 		$.ajax({
 				url: 'Sharing Framework/edith/functions/save.php',
 				type: 'POST',
-				data: {code: "the_Project_code_here", projectName: "the_projectName_here"}, //update what the project code and name are
+				data: {code: json, projectName: projectId}, //update what the project code (The json that we want to save) and name are
+				dataType: JSON,
 				success: function(){
 						console.log("Succsessful post!");
 				},
@@ -132,10 +131,13 @@
 <div class="buttons">
  <button id="button1" onclick = 'main(UNIVERSAL_MAIN)'>Play</button>
  <!-- <button id="button2" onclick = 'wait()'>Pause</button> -->
- <button id="button3" onclick = 'popitup("../object_creator_integration_3/kineticExample.html")'>Make Object</button>
+ <button id="button3" onclick = 'popitupObj("object_creator/ObjectCreation.html")'>Make Object</button>
  <button id="button4" onClick = 'save()'>Save</button>
- <button id="button5" onClick = 'loadProject("testName")'>Load</button>
+ <button id="button5" onClick = 'loadProject()'>Load</button>
+  <button id="button6" onClick = 'loadThatThing()'>Load Circle</button>
+  <a href = "Sharing Framework/edith/functions/display.php" >Display Projects </a>
 </div>
+
 
 </body>
 
