--- a/Trunk/object_creator/ObjectCreation.html
+++ b/Trunk/object_creator/ObjectCreation.html
@@ -80,7 +80,7 @@
             <label> Upload Image: </label>
             <input type= "file" id = "imageLoader"  accept="image/gif, image/jpeg, image/png" /> </br>
         
-			<button type="button" onclick="saveAllObject()">Save all Objects</button> <!--For Ajax?-->
+			<button type="button" onclick="saveAllObject()">Save all Layers</button> <!--For Ajax?-->
             <button type="button" onclick="exporting()">Export the Object</button>
 			
             
