--- a/Trunk/object_creator/ObjectCreation.html
+++ b/Trunk/object_creator/ObjectCreation.html
@@ -132,7 +132,7 @@
                         var degreeInt = parseInt(degree);
                         if(degree == degreeInt)
                         {
-                            obj.rotateDeg(degree);
+                            obj.rotateDeg(-degree);
                             currentLayer.draw();
                         }
                         else 
