some more help pop up stuff

--- a/Trunk/object_creator/helpPopUp.html
+++ b/Trunk/object_creator/helpPopUp.html
@@ -31,7 +31,9 @@ Need Help Navigating the Canvas?
 	<li> By selecting the "None" button, you remove the extra functionality from the mouse and can begin dragging your objects again. </li>
 
 	</br><b>Using Different Layers</b>
-	<li>***Adding, Clearing, Deleting****</li>
+	<li> To add a layer, click "Add Layer" and name the layer you wish to create.</li>
+	<li> To clear your current layer, click "Clear Layer" and start over.</li>
+	<li> To delete a layer, click "Delete Layer."</li>
 	
 	</br><b>Saving Objects</b>
 	<li>First, click "Save All Layers"</li>
