fixes tutorial to correspond with changes

--- a/Trunk/help.html
+++ b/Trunk/help.html
@@ -31,7 +31,9 @@
 
 		<br><br><center><img src="tutorialPix/loadObject.png" width=800 height=500 align="middle"></center><br>
 
-		Now you're ready to code! On the right side of the screen is your coding area. The blue boxes are categories, and the orange boxes are coding boxes. You can drag the orange boxes over the red line to put them in your code. Below I have coded a simple jump. I dragged over the "method" box and called my method "jump", but didn't enter any parameters. Then went to the "predefined" category and dragged over the "jump" box while having my stick figure selected. (To select a stick figure, just click them, they will glow to show that they are active) I also was prompted to enter the duration and height of the jump. Finally, I went back to the "method" category and dragged over the "end" box to end my method. And just like that, I have a simple method to make my stick figure jump!
+		Now you're ready to code! On the right side of the screen is your coding area. The blue boxes are categories, and the orange boxes are coding boxes. You can drag the orange boxes over the red line to put them in your code. All code must go inside of the "main()" function. If you need more space, you can always drag boxes around to resize, and if you want to delete boxes, you can drag it back over the red line.
+		<br><br>
+		Below I have coded a simple jump. I dragged over the "method" box and called my method "jump", but didn't enter any parameters. Then went to the "predefined" category and dragged over the "jump" box while having my stick figure selected. (To select a stick figure, just click them, they will glow to show that they are active) I also was prompted to enter the duration and height of the jump. Finally, I went back to the "method" category and dragged over the "end" box to end my method. And just like that, I have a simple method to make my stick figure jump!
 
 		<br><br><center><img src="tutorialPix/coding.png" align="middle"></center><br>
 
