--- a/Trunk/Sharing Framework/edith/ObjectCreation.html
+++ b/Trunk/Sharing Framework/edith/ObjectCreation.html
@@ -334,7 +334,7 @@
                                     ObjectArray: sendingArray,
 									ObjectName: objectArrayName
                                 },
-                                url: "functions/ObjectSave.php",
+                                url: "asups.pugetsound.edu/projects/edith/functions/ObjectSave.php",
 								success: function() {
                                     alert("Exported successfully");
                                 }
