--- a/Trunk/Sharing Framework/edith/index.html
+++ b/Trunk/Sharing Framework/edith/index.html
@@ -33,7 +33,7 @@ if(isset($_SESSION['userName'])){
 </div> -->
 
 <div id="wrapper">
-<form name="login" class="login" id = "login" method = "post" action = "/edith/functions/login.php">
+<form name="login" class="login" id = "login" method = "post" action = "asups.pugetsound.edu/projects/edith/functions/login.php">
   <div class="header">
   <h1> Welcome to Edith!</h1>
   <span>Please sign in to get started creating your totally awesome story.</span>
