--- a/Trunk/Sharing Framework/edith/mainPage.html
+++ b/Trunk/Sharing Framework/edith/mainPage.html
@@ -52,7 +52,7 @@
  <button id="button3" onclick = 'popitupObj("ObjectCreation.html")'>Make Object</button>
  <button id="button4" onClick = 'save()'>Save</button>
  <button id="button5" onClick = 'loadProject()'>Load</button>
- <a href = "Sharing Framework/edith/functions/display.php" >Display Projects </a>
+ <a href = "asups.pugetsound.edu/projects/edith/functions/display.php" >Display Projects </a>
    <!-- <button id="button6" onclick = 'popitupObj("Sharing Framework/edith/functions/display.php")'>Display Projects</button>-->
  <button id="button7" onclick = 'popitupHelp("help.html")'>Help</button>
 </div>
