--- a/Trunk/mainPage.html
+++ b/Trunk/mainPage.html
@@ -48,7 +48,7 @@
 
 <div class="buttons">
  <button id="button1" onclick = 'animationMain(UNIVERSAL_MAIN)'>Play</button>
- <!-- <button id="button2" onclick = 'wait()'>Pause</button> -->
+ <button id="button2" onclick = 'resetCanvas(oCanvasElement)'>Reset Canvas</button>
  <button id="button3" onclick = 'popitupObj("object_creator/ObjectCreation.html")'>Make Object</button>
  <button id="button4" onClick = 'save()'>Save</button>
  <button id="button5" onClick = 'loadProject()'>Load</button>
