--- a/Trunk/object_creator/ObjectCreation.html
+++ b/Trunk/object_creator/ObjectCreation.html
@@ -408,6 +408,7 @@
                         if (r == true) {
                         var cl = shape.getParent();
                         shape.destroy();
+                        //cl.draw();
                         canvas.add(cl);
                         }
                     }
